# Advent-Of-Code

./: Advent-Of-Code.sln  README.md
2015/1/: main.py
2015/2/: main.py
2015/3/: main.py
2015/4/: main.py
2015/5/: main.py
2015/6/: LightGrid.py  main.py
2015/7/: main.py
2016/1/: main.go
2016/2/: go.mod  main.go
2019/: README.md
2019/day_01/: day_01.js  day_1.json  day_1_test.json
2019/day_02/: day_02.js  day_02.json
2019/day_03/: day_03.js
2019/day_04/: day_04.js
2019/day_05/: index.js
2019/day_06/: index.js
2019/day_07/: index.js
2019/day_08/: index.js
2019/day_09/: index.js
2019/day_10/: index.js
2019/day_11/: index.js
2019/day_12/: index.js
2020/01/: package-lock.json  package.json
2021/: day02.js  day08.js  day09.js  day10.js  day11.js  day12.js  day13.js  day14.js  day15.js  dayFive.js  dayFour.js  dayOne.js  daySeven.js  daySix.js  dayThree.js  package.json  readTestInput.js
2022/: README.md
2022/00/: index.js  index.ts
2022/01/: index.js  index.ts
2022/02/: index.js  index.ts  package-lock.json
2022/03/: index.js  index.ts
2022/04/: index.js  index.ts
2022/05/: index.js  index.ts  package.json
2022/06/: index.js  index.ts
2022/07/: index.js  index.ts  package-lock.json  package.json
2023/01/: main.py  pyproject.toml
2023/02/: main.py  pyproject.toml
2023/03/: main.py  pyproject.toml
2023/04/: main.py  pyproject.toml
2023/05/: main.py  pyproject.toml
2024/00/: package.json
2024/01/: index.js  index.ts  package-lock.json
2024/02/: main.py
2024/03/: 03.csproj  Program.cs  input.txt
(+46 files in other folders)
