[tool.poetry]
name = "01"
version = "0.1.0"
description = ""
authors = ["adam slack <adam.slack@nimbleapproach.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
main = ".main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
